--- a/source/pages/activity/activity.wxml
+++ b/source/pages/activity/activity.wxml
@@ -48,7 +48,6 @@
                             <!-- 单选选择器 -->
                             <picker name="{{index}}" id="{{index}}" class="answer" range="{{item.options}}" range-key="name" bindchange="bindPickerChange">
                                 {{item.value==''?'请选择':item.value}}
-
                             </picker>
                             <image src="{{uploadpath}}resource/{{res.select}}" style="width: 28rpx; height: 28rpx;"></image>
                         </view>
@@ -62,43 +61,58 @@
 
                 </view>
 
+                <!-- {{activityinfo.baomingid=='' }} -->
+                <!-- style="display: {{activityinfo.baomingid == '' ? 'block' : 'none'}};" -->
+                <!-- style="display: {{activityinfo.baomingid == '' ? 'none' : 'block'}};" -->
+                <!-- style="display: {{activityinfo.baomingid == '' ? 'none' : 'block'}};" -->
 
-
+                <!-- 活动状态：报名中 -->
                 <view style="display: {{activityinfo.baomingjiangtai == 'B' ? '' : 'none'}};">
-                    <view>
-                        <button class="btns butcolor margin-top-60" formType="submit" style="display: {{activityinfo.baomingid == '' ? 'block' : 'none'}};">报名</button>
-                    </view>
-                    <view wx:if="{{timess < activityinfo.cannot}}">
-                        <button class="btns butcolor margin-top-60" bindtap="removebaoming" style="display: {{activityinfo.baomingid == '' ? 'none' : 'block'}};">取消报名</button>
-                    </view>
-                    <view wx:else>
-                        <button disabled="true" class="btns  margin-top-60" bindtap="removebaoming" style="display: {{activityinfo.baomingid == '' ? 'none' : 'block'}};">取消报名</button>
+                    <!-- 没报名：报名 -->
+                    <view style="display: {{activityinfo.baomingid == '' ? 'block' : 'none'}};">
+                        <button class="btns butcolor margin-top-60" formType="submit">报名</button>
                     </view>
 
-                </view>
-                <view style="display: {{activityinfo.baomingjiangtai == 'D' ? '' : 'none'}};">
-                    <view style="display: {{activityinfo.baomingid == '' ? 'block' : 'none'}};">
-                        <button class="btns  margin-top-60" disabled="true" style="display: {{activityinfo.baomingid == '' ? 'block' : 'none'}};">报名</button>
-                    </view>
+                    <!-- 报了名：取消报名 -->
                     <view style="display: {{activityinfo.baomingid == '' ? 'none' : 'block'}};">
+                        <!-- 禁止取消报名 -->
                         <view wx:if="{{timess < activityinfo.cannot}}">
                             <button class="btns butcolor margin-top-60" bindtap="removebaoming">取消报名</button>
                         </view>
                         <view wx:else>
-                            <button disabled="true" class="btns  margin-top-60" bindtap="removebaoming" style="display: {{activityinfo.baomingid == '' ? 'none' : 'block'}};">取消报名</button>
+                            <button disabled="true" class="btns  margin-top-60" bindtap="removebaoming">取消报名</button>
+                        </view>
+                    </view>
+
+                </view>
+
+                <!-- 活动报名结束 -->
+                <view style="display: {{activityinfo.baomingjiangtai == 'D' ? '' : 'none'}};">
+                <!-- 没报名 -->
+                    <view style="display: {{activityinfo.baomingid == '' ? 'block' : 'none'}};">
+                        <button class="btns  margin-top-60" disabled="true">报名</button>
+                    </view>
+                    <!-- 已经报名 -->
+                    <view style="display: {{activityinfo.baomingid == '' ? 'none' : 'block'}};">
+                    <!-- 报名时间结束但是还可以取消报名 -->
+                        <view wx:if="{{timess < activityinfo.cannot}}">
+                            <button class="btns butcolor margin-top-60" bindtap="removebaoming">取消报名</button>
+                        </view>
+                        <!-- 报名时间结束，禁止取消报名 -->
+                        <view wx:else>
+                            <button disabled="true" class="btns  margin-top-60" bindtap="removebaoming">取消报名</button>
                         </view>
                     </view>
                 </view>
             </form>
         </view>
 
+<!-- 有问题 -->
         <view wx:else>
             <form catchsubmit="formSubmit" id="submit">
                 <view style="display: {{question.length == 0?'none':'block'}};" class="question padding-top-40">【报名信息填写】</view>
                 <view wx:for="{{question}}" wx:key='k' wx:for-index="index">
                     <view class="question padding-top-40 padding-bottom-40">{{item.name}}</view>
-
-
                     <view wx:if="{{activityinfo.orderinfolen.length==0}}">
                         <view class="flex-row" wx:if="{{item.isxuan == '是' && item.options.length != 0}}">
                             <picker name="{{index}}" class="answer f-28" style="width: 100%; height: 112rpx;" range-key="name" bindchange="bindPickerChange" id="{{index}}" range="{{item.options}}" value="{{index}}">
@@ -107,45 +121,51 @@
                             <image src="{{uploadpath}}resource/{{res.select}}" style="width: 28rpx; height: 28rpx;"></image>
                         </view>
                         <view wx:else>
-                            <input name="{{index}}" value="{{item.value}}" placeholder="请输入" bindinput="bindKeyInput" id="{{index}}" class="answer f-28" type="text" />
+                            <input  name="{{index}}" value="{{item.value}}" placeholder="请输入" bindinput="bindKeyInput" id="{{index}}" class="answer f-28" type="text" />
                         </view>
                     </view>
-
                     <view wx:if="{{activityinfo.orderinfolen.length > 0}}">
                         {{activityinfo.answer[index].answer}}
                     </view>
-
                 </view>
+
+                <!-- 活动状态：报名中 -->
                 <view style="display: {{activityinfo.baomingjiangtai == 'B' ? '' : 'none'}};">
-                    <view>
-                        <button class="btns butcolor margin-top-60" formType="submit" style="display: {{activityinfo.baomingid == '' ? 'block' : 'none'}};">报名</button>
-                    </view>
-                    <view wx:if="{{timess < activityinfo.cannot}}">
-                        <button class="btns butcolor margin-top-60" bindtap="removebaoming" style="display: {{activityinfo.baomingid == '' ? 'none' : 'block'}};">取消报名</button>
-                    </view>
-                    <view wx:else>
-                        <button disabled="true" class="btns  margin-top-60" bindtap="removebaoming" style="display: {{activityinfo.baomingid == '' ? 'none' : 'block'}};">取消报名</button>
+                    <!-- 没报名：报名 -->
+                    <view style="display: {{activityinfo.baomingid == '' ? 'block' : 'none'}};">
+                        <button class="btns butcolor margin-top-60" formType="submit">报名</button>
                     </view>
 
-                </view>
-                <view style="display: {{activityinfo.baomingjiangtai == 'D' ? '' : 'none'}};">
-                    <view style="display: {{activityinfo.baomingid == '' ? 'block' : 'none'}};">
-                        <button class="btns  margin-top-60" disabled="true" style="display: {{activityinfo.baomingid == '' ? 'block' : 'none'}};">报名</button>
-                    </view>
+                    <!-- 报了名：取消报名 -->
                     <view style="display: {{activityinfo.baomingid == '' ? 'none' : 'block'}};">
+                        <!-- 禁止取消报名 -->
                         <view wx:if="{{timess < activityinfo.cannot}}">
                             <button class="btns butcolor margin-top-60" bindtap="removebaoming">取消报名</button>
                         </view>
                         <view wx:else>
-                            <button disabled="true" class="btns  margin-top-60" bindtap="removebaoming" style="display: {{activityinfo.baomingid == '' ? 'none' : 'block'}};">取消报名</button>
+                            <button disabled="true" class="btns  margin-top-60" bindtap="removebaoming">取消报名</button>
                         </view>
                     </view>
-                    <!-- <view wx:if="{{timess < activityinfo.endbaoming}}">
-                        <button class="btns margin-top-60" bindtap="removebaoming" style="display: {{activityinfo.baomingid == '' ? 'none' : 'block'}};">取消报名</button>
-                    </view> -->
-                    <!--  <view wx:else>
-                        <button disabled="true" class="btns margin-top-60" bindtap="removebaoming" style="display: {{activityinfo.baomingid == '' ? 'none' : 'block'}};">取消报名</button>
-                    </view> -->
+
+                </view>
+
+                <!-- 活动报名结束 -->
+                <view style="display: {{activityinfo.baomingjiangtai == 'D' ? '' : 'none'}};">
+                <!-- 没报名 -->
+                    <view style="display: {{activityinfo.baomingid == '' ? 'block' : 'none'}};">
+                        <button class="btns  margin-top-60" disabled="true">报名</button>
+                    </view>
+                    <!-- 已经报名 -->
+                    <view style="display: {{activityinfo.baomingid == '' ? 'none' : 'block'}};">
+                    <!-- 报名时间结束但是还可以取消报名 -->
+                        <view wx:if="{{timess < activityinfo.cannot}}">
+                            <button class="btns butcolor margin-top-60" bindtap="removebaoming">取消报名</button>
+                        </view>
+                        <!-- 报名时间结束，禁止取消报名 -->
+                        <view wx:else>
+                            <button disabled="true" class="btns  margin-top-60" bindtap="removebaoming">取消报名</button>
+                        </view>
+                    </view>
                 </view>
             </form>
         </view>
