--- a/source/pages/addpingjia/addpingjia.wxss
+++ b/source/pages/addpingjia/addpingjia.wxss
@@ -37,7 +37,7 @@
 .btns {
     width: 678rpx;
     height: 92rpx;
-    background: #44B549;
+    /* background: #44B549; */
     box-shadow: 0rpx 4rpx 16rpx 0rpx rgba(68,181,73,0.5);
     border-radius: 48rpx;
     line-height: 92rpx;
