--- a/source/pages/buygiftcardsinfo/buygiftcardsinfo.wxml
+++ b/source/pages/buygiftcardsinfo/buygiftcardsinfo.wxml
@@ -6,9 +6,9 @@
             <scaroll-view scroll-x="true" class="flex-row flex-column" style="height: 590rpx; width: 100%; white-space: nowrap; margin-top: 30rpx;">
                 <image style="width: 700rpx; height: 420rpx; border-radius: 32rpx; margin-bottom: 30rpx;" src="{{uploadpath}}giftcardinfo/{{cardbanner[coverindex].image}}" alt=""></image>
                 <view style="display: inline-block; width: 100%;">
-                    <image wx:for="{{cardbanner}}" wx:key="item" wx:for-index="index"  bindtap="selectcover" data-coverindex="{{index}}" id="{{item.id}}" class="img {{coverindex==index?'border_green':''}}" src="{{uploadpath}}giftcardinfo/{{item.image}}"></image>
-                    
-                    <!-- <image style="width: 36rpx;height: 36rpx;" src="{{uploadpath}}resource/{{res.coverselect}}"></image> -->
+                    <view wx:for="{{cardbanner}}" wx:key="item" wx:for-index="index"  bindtap="selectcover" data-coverindex="{{index}}" id="{{item.id}}" class="img {{coverindex==index?'border_green':''}}" style="background-image: url({{uploadpath}}giftcardinfo/{{item.image}});">
+                        <image wx:if="{{coverindex==index}}" style="width: 36rpx;height: 36rpx; float: right;" src="{{uploadpath}}resource/{{res.coverselect}}"></image>
+                    </view>
                 </view>
             </scaroll-view>
             
