--- a/source/pages/conponuse/conponuse.wxml
+++ b/source/pages/conponuse/conponuse.wxml
@@ -14,11 +14,11 @@
                                 <image wx:else src="{{uploadpath}}resource/{{res.chose}}" class="icon30"></image>
                             </view>
                             <view class="flex-row flex-column flex-center" style="width: 33.33%; margin-bottom: 24rpx;">
-                                <view wx:if="{{item.type == 'A'}}" class="flex-row" style="line-height: 80rpx;">
+                                <view wx:if="{{item.type == 'A'}}" class="flex-row" style="line-height: 90rpx;">
                                     <view class="f-28 fontcolor">￥</view>
                                     <view class="f-56 fontcolor">{{item.amount}}</view>
                                 </view>
-                                <view wx:if="{{item.type == 'B'}}" class="flex-row" style="line-height: 80rpx;">
+                                <view wx:if="{{item.type == 'B'}}" class="flex-row" style="line-height: 90rpx;">
                                     <view class="f-56 fontcolor">{{item.zhekou/10}}</view>
                                     <view class="f-28 fontcolor">折</view>
                                 </view>
@@ -26,7 +26,7 @@
                             </view>
                             <view class="flex-1" style="margin-left: 40rpx;">
                                 <view class="f-32" style="font-weight: 500; color: #333333; line-height: 80rpx;">{{item.name}}</view>
-                                <view class="f-24" style="color: #999999;line-height: 34rpx;">有效期至{{item.end_time}}</view>
+                                <view class="f-24" style="color: #999999;">有效期至{{item.end_time}}</view>
                             </view>
                         </view>
                         <view class="flex-row flex-center" style="border-top: 2rpx solid #E1E3E699;">
