--- a/source/pages/feedback/feedback.wxml
+++ b/source/pages/feedback/feedback.wxml
@@ -2,7 +2,7 @@
 <view class="flex-row flex-column">
     <view class="w">
         <view>
-            <textarea class="h5 txt-33 textbox" maxlength="500" value="{{contents}}" bindinput="contentsFn" placeholder="请输入您要反馈的问题（5-500字以内）"></textarea>
+            <textarea class="h5 txt-33 textbox" maxlength="500" value="{{contents}}" bindinput="contentsFn" placeholder="请输入您要反馈的问题....."></textarea>
             <view class="margin-top-30">
                 <view class="f-28 txt-33 txt-weight-500 margin-bottom-20">图片（选填，提供问题截图）</view>
                 <view class="flex-row flex-wrap">
