--- a/source/pages/giftcardshiyongjilu/giftcardshiyongjilu.wxml
+++ b/source/pages/giftcardshiyongjilu/giftcardshiyongjilu.wxml
@@ -5,9 +5,12 @@
 <view wx:else  class="flex-row flex-column" style="background-color: rgba(243, 246, 247, 1);  min-height: 100vh;">
     <view wx:for="{{mygiftcardshiyongjilu}}" class="flex-row flex-column" style="width: 696rpx;height: 204rpx;background: #FFFFFF;border-radius: 32rpx;margin-top: 20rpx;">
         <view class="flex-row" style="margin: 32rpx auto 32rpx 28rpx;">
+        <view>
             <image wx:if="{{item.cardtype=='A'}}" src=" {{uploadpath}}giftcardinfo/{{item.cardcover_image}}" style="width: 236rpx;height: 140rpx;border-radius: 12rpx;background: #CECECE;"></image>
             <image wx:if="{{item.cardtype=='B'}}" src=" {{uploadpath}}giftcardinfo/{{item.cover}}" style="width: 236rpx;height: 140rpx;border-radius: 12rpx;background: #CECECE;"></image>
-            <view style="margin-left: 16rpx;">
+        </view>
+            
+            <view class="flex-1" style="margin-left: 16rpx;">
                 <view wx:if="{{item.cardtype=='A'}}" class="v1">面值￥{{item.giftcardprice_cardprice}}</view>
                 <view wx:if="{{item.cardtype=='B'}}" class="v1">面值￥{{item.shiwukaprice}}</view>
                 <view wx:if="{{item.cardtype=='A'}}" class="v2">卡号：{{item.buynum}}</view>
