--- a/source/pages/myactivity/myactivity.wxml
+++ b/source/pages/myactivity/myactivity.wxml
@@ -9,7 +9,7 @@
 <view class="height-100"></view>
 
 <view>
-    <view class="flex-row kongbaitips" wx:if="{{baominglist.length<=0}}">
+    <view class="flex-row kongbaitips min-height-90" wx:if="{{baominglist.length<=0}}">
         <image src="{{uploadpath}}resource/{{res.kongbaiyetubiao}}"></image>
     </view>
     <view wx:for="{{baominglist}}" wx:key='k' class="activeliat" bindtap="navigateto" bindtap="navigateto" id="/pages/activity/activity?id={{item.activity_id}}">
