--- a/source/pages/mycoupon/mycoupon.wxml
+++ b/source/pages/mycoupon/mycoupon.wxml
@@ -10,7 +10,7 @@
 
 
     <view class="flex-row flex-column" style="display: {{flag == 'A' ? 'block' :'none'}}; min-height: 90vh; position: relative;">
-        <view class="flex-row kongbaitips" wx:if="{{keshiyonglist.length<=0}}">
+        <view class="flex-row kongbaitips min-height-100" wx:if="{{keshiyonglist.length<=0}}">
             <image src="{{uploadpath}}resource/{{res.kongbaiyetubiao}}"></image>
         </view>
         <view wx:else style="margin-bottom: 92rpx; ">
@@ -18,11 +18,11 @@
                 <view style="margin: 30rpx;">
                     <view class="flex-row">
                         <view class="flex-row flex-column flex-center" style="width: 33.33%; margin-bottom: 24rpx;">
-                            <view wx:if="{{item.type == 'A'}}" class="flex-row" style="line-height: 80rpx;">
+                            <view wx:if="{{item.type == 'A'}}" class="flex-row" style="line-height: 90rpx;">
                                 <view class="f-28 fontcolor">￥</view>
                                 <view class="f-56 fontcolor">{{item.amount}}</view>
                             </view>
-                            <view wx:if="{{item.type == 'B'}}" class="flex-row" style="line-height: 80rpx;">
+                            <view wx:if="{{item.type == 'B'}}" class="flex-row" style="line-height: 90rpx;">
                                 <view class="f-56 fontcolor">{{item.zhekou/10}}</view>
                                 <view class="f-28 fontcolor">折</view>
                             </view>
@@ -37,9 +37,7 @@
                     <view class="flex-row flex-center" style="border-top: 2rpx solid #E1E3E699;">
                         <view class="f-24" style="line-height: 34px;color: #999999;">备注：{{item.shiduan}}</view>
                         <view class="flex-1"></view>
-                        <button class="butcolor" bindtap="usecoupon" style="border-radius: 24rpx; width:200rpx;line-height: 48rpx;">
-                            <view class="f-24">立即使用</view>
-                        </button>
+                        <button class="f-24 butcolor" bindtap="usecoupon" style="border-radius: 24rpx; width:200rpx;line-height: 48rpx;">立即使用</button>
                     </view>
                 </view>
 
@@ -50,7 +48,7 @@
 
     </view>
     <view class="flex-row flex-column" style="display: {{flag == 'B' ? 'block' :'none'}}; min-height: 90vh; position: relative;">
-        <view class="flex-row kongbaitips" wx:if="{{shiyonglist.length<=0}}">
+        <view class="flex-row kongbaitips min-height-100" wx:if="{{shiyonglist.length<=0}}">
             <image src="{{uploadpath}}resource/{{res.kongbaiyetubiao}}"></image>
         </view>
         <view style="margin-bottom: 92rpx; ">
@@ -58,11 +56,11 @@
                 <view style="margin: 30rpx;">
                     <view class="flex-row">
                         <view class="flex-row flex-column flex-center" style="width: 33.33%; margin-bottom: 24rpx;">
-                            <view wx:if="{{item.type == 'A'}}" class="flex-row" style="line-height: 80rpx;">
+                            <view wx:if="{{item.type == 'A'}}" class="flex-row" style="line-height: 90rpx;">
                                 <view class="f-28 txt-99">￥</view>
                                 <view class="f-56 txt-99">{{item.amount}}</view>
                             </view>
-                            <view wx:if="{{item.type == 'B'}}" class="flex-row" style="line-height: 80rpx;">
+                            <view wx:if="{{item.type == 'B'}}" class="flex-row" style="line-height: 90rpx;">
                                 <view class="f-56 txt-99">{{item.zhekou/10}}</view>
                                 <view class="f-28 txt-99">折</view>
                             </view>
@@ -86,7 +84,7 @@
 
     </view>
     <view class="flex-row flex-column" style="display: {{flag == 'C' ? 'block' :'none'}}; min-height: 90vh; position: relative;">
-        <view class="flex-row kongbaitips" wx:if="{{shixiaolist.length<=0}}">
+        <view class="flex-row kongbaitips min-height-100" wx:if="{{shixiaolist.length<=0}}">
             <image src="{{uploadpath}}resource/{{res.kongbaiyetubiao}}"></image>
         </view>
         <view style="margin-bottom: 92rpx; ">
@@ -98,11 +96,11 @@
                     <view style="margin: 30rpx;">
                         <view class="flex-row">
                             <view class="flex-row flex-column flex-center" style="width: 33.33%; margin-bottom: 24rpx;">
-                                <view wx:if="{{item.type == 'A'}}" class="flex-row" style="line-height: 80rpx;">
+                                <view wx:if="{{item.type == 'A'}}" class="flex-row" style="line-height: 90rpx;">
                                     <view class="f-28 txt-99">￥</view>
                                     <view class="f-56 txt-99">{{item.amount}}</view>
                                 </view>
-                                <view wx:if="{{item.type == 'B'}}" class="flex-row" style="line-height: 80rpx;">
+                                <view wx:if="{{item.type == 'B'}}" class="flex-row" style="line-height: 90rpx;">
                                     <view class="f-56 txt-99">{{item.zhekou/10}}</view>
                                     <view class="f-28 txt-99">折</view>
                                 </view>
