--- a/source/pages/mypingjia/mypingjia.wxss
+++ b/source/pages/mypingjia/mypingjia.wxss
@@ -13,7 +13,7 @@
     font-size: 24rpx;
     font-weight: 400;
     color: #333333;
-    line-height: 24rpx;
+    /* line-height: 24rpx; */
     text-shadow: 0rpx 0rpx 18rpx rgba(0, 0, 0, 0.08);
 }
 
