--- a/source/pages/orderdetail/orderdetail.wxml
+++ b/source/pages/orderdetail/orderdetail.wxml
@@ -96,15 +96,15 @@
                 <view class="h5" style="color:#888888;">未使用</view>
                 <!-- <image src="{{uploadpath}}resource/{{res.righticon}}" class="righticon"></image> -->
             </view>
-            <view wx:else class="h5" style="color:#44B549;">-￥{{info.couponprice}}</view>
+            <view wx:else class="h5" style="color:#44B549;">-¥{{info.couponprice}}</view>
         </view>
     </view>
     <view class="height-70"></view>
     <view class="total">
         <view class="flex-row flex-center">
-            <view class="h5 txt-33">商品总金额</view>
+            <view class="h5 txt-33">商品金额</view>
             <view class="flex-1"></view>
-            <view class="h5" style="color:#888888;">¥{{info.totalamount}}</view>
+            <view class="h5" style="color:#888888;">¥{{info.price}}</view>
         </view>
         <view class="flex-row flex-center margin-top-24">
             <view class="h5 txt-33">运费</view>
@@ -143,6 +143,10 @@
 </view>
 
 <view class="flex-row flex-center fixbottom" wx:if="{{info.orderstatus=='C'}}">
+    <view class="flex-1"></view>
+    <view class="cancelbtn margin-right-20" bindtap="shouhuo">确认收货</view>
+</view>
+<view class="flex-row flex-center fixbottom" wx:if="{{info.orderstatus=='D'}}">
     <view class="flex-1"></view>
     <view class="cancelbtn margin-right-20" bindtap="shouhuo">确认收货</view>
 </view>
