--- a/source/pages/conponuse/conponuse.wxml
+++ b/source/pages/conponuse/conponuse.wxml
@@ -1,11 +1,11 @@
-<!--pages/conponuse/conponuse.wxml-->
+<!-- pages/conponuse/conponuse.wxml -->
 <view class="flex-row flex-column firstbox">
     <view class="flex-row kongbaitips min-height-100" wx:if="{{couponlist.length<=0}}">
         <image src="{{uploadpath}}resource/{{res.kongbaiyetubiao}}"></image>
     </view>
     <view wx:else>
         <view>
-            <view class="list" >
+            <view class="list">
                 <view class="listbox" wx:for="{{couponlist}}" id="{{item.id}}" bindtap="choseconpon">
                     <view>
                         <view class="flex-row">
@@ -22,28 +22,31 @@
                                     <view class="f-56 fontcolor">{{item.zhekou/10}}</view>
                                     <view class="f-28 fontcolor">折</view>
                                 </view>
-                                <view class="f-24" style="color: #999; line-height: 34rpx; height: 34rpx;">满{{item.manmoney}}元可用</view>
+                                <view class="f-24" style="color: #999; line-height: 34rpx; height: 34rpx;">
+                                    满{{item.manmoney}}元可用
+                                </view>
                             </view>
                             <view class="flex-1" style="margin-left: 40rpx;">
-                                <view class="f-32" style="font-weight: 500; color: #333333; line-height: 80rpx;">{{item.name}}</view>
-                                <view class="f-24" style="color: #999999;">有效期至{{item.end_time}}</view>
+                                <view class="f-32" style="font-weight: 500; color: #333333; line-height: 80rpx;">
+                                    {{item.name}}
+                                </view>
+                                <view class="f-24" style="color: #999999;">
+                                    有效期至{{item.end_time}}
+                                </view>
                             </view>
                         </view>
                         <view class="flex-row flex-center" style="border-top: 2rpx solid #E1E3E699;">
-                            <view class="f-24" style="line-height: 34px;color: #999999;">备注:{{item.shiduan}}</view>
+                            <view class="f-24" style="line-height: 34px;color: #999999;">
+                                备注:{{item.shiduan}}
+                            </view>
                             <view class="flex-1"></view>
                         </view>
                     </view>
-
                 </view>
             </view>
             <view>
                 <button bindtap="use" class="shiyong butcolor">确认使用</button>
             </view>
-            
         </view>
-        
     </view>
-
-
 </view>
