--- a/source/pages/mall/mall.wxss
+++ b/source/pages/mall/mall.wxss
@@ -26,7 +26,7 @@
    margin-left: 26rpx;
  }
  .typeline-bg {
-  background: #D9D9D9;
+  background-color: rgba(90,165,122);
  }
  .h34 {
    height: 34rpx;
@@ -54,4 +54,14 @@
 }
 .h120 {
   height: 120rpx;
+}
+.goods-swiper{
+  width: 100%;
+  height: 100vh;
+}
+.border-bg{
+  border: 1px solid #F8F6F7;
+}
+.margin-top-42{
+  margin-top: 120rpx;
 }
