--- a/source/pages/my/my.wxss
+++ b/source/pages/my/my.wxss
@@ -75,11 +75,11 @@
 .ordericon {
     width: 72rpx;
     height: 60rpx;
-    margin-bottom: 32rpx;
+    margin-bottom: 15rpx;
 }
 
 .orderbox {
-    margin: 32rpx 30rpx;
+    margin: 15rpx 30rpx;
     background: #ffffff;
     box-shadow: 0rpx 0rpx 24rpx 0rpx rgba(0,0,0,0.18);
     border-radius: 20rpx;
@@ -87,11 +87,11 @@
 }
 
 .lipin {
-    margin: 34rpx 30rpx;
+    margin: 15rpx 30rpx;
     background: #FFFFFF;
     box-shadow: 0rpx 0rpx 24rpx 0rpx rgba(0,0,0,0.18);
     border-radius: 12rpx;
-    padding: 38rpx 0 38rpx 38rpx;
+    padding: 38rpx 0 38rpx 28rpx;
     position: relative;
 }
 .lipinka {
@@ -102,12 +102,13 @@
     right: 0;
 }
 .timian {
-   margin: 20rpx 10rpx 32rpx 30rpx;
-   padding: 28rpx 26rpx;
+   margin: 0 10rpx 15rpx 28rpx;
+   padding: 28rpx 28rpx;
     background: #FFFFFF;
     box-shadow: 0rpx 0rpx 24rpx 0rpx rgba(0,0,0,0.18);
     border-radius: 12rpx;
     position: relative;
+    
 }
 .mytimian {
     width: 112rpx;
@@ -117,8 +118,8 @@
     right: 0;
 }
 .pinjian {
-    margin: 20rpx 30rpx 32rpx 10rpx;
-    padding: 28rpx 26rpx;
+    margin: 0 30rpx 15rpx 10rpx;
+    padding: 28rpx 28rpx;
     background: #FFFFFF;
     box-shadow: 0rpx 0rpx 24rpx 0rpx rgba(0,0,0,0.18);
     border-radius: 12rpx;
@@ -138,8 +139,8 @@
 }
 
 .fuwu {
-    margin: 32rpx 30rpx;
-    padding: 24rpx;
+    margin: 15rpx 30rpx;
+    padding: 28rpx;
     background: #FFFFFF;
     box-shadow: 0rpx 0rpx 24rpx 0rpx rgba(0,0,0,0.18);
     border-radius: 20rpx;
