--- a/source/pages/malldetail/malldetail.wxml
+++ b/source/pages/malldetail/malldetail.wxml
@@ -15,17 +15,20 @@
 </view>
 
 <view class="padding26">
-    <view class="f-36 " style="color:#3A3A3A;">{{info.name}}</view>
+<view class="titele_top">
+    <view class="title_top_text">库存 {{info.inventory}}</view> <view class="title_top_text">{{info.sales}}人已付款</view>
+</view>
+    <view class="f-36 titele_top_main" style="color:#3A3A3A;">{{info.name}}</view>
     <view class="margin-top-28">
-        <text class="f-26 txt-99 ">{{info.summary}}</text>
+        <text class="f-26 txt-99 titele_top_main">{{info.summary}}</text>
     </view>
-    <view class="flex-row flex-bottom margin-top-24">
-        <view class="txt-c9 h6">￥</view>
+    <view class="flex-row flex-bottom margin-top-24 titele_top_main">
+        <view class="txt-c9 h6" >￥</view>
         <view class="txt-c9 h4">{{info.price}}</view>
-        <view wx:if="{{info.old_price>0}}" class="h6" style="color:#A1A3A6;">￥{{info.old_price}}</view>
+        <view wx:if="{{info.old_price>0}}" class="h6 titele_top_main" style="color:#A1A3A6;text-decoration: line-through;">￥{{info.old_price}}</view>
     </view>
-    <view class="height-50"></view>
-    <view class="flex-row">
+    <!-- <view class="height-50"></view> -->
+    <!-- <view class="flex-row">
         <view class="fivebox" wx:if="{{info.yunfei!=0}}">邮费￥{{info.yunfei}}</view>
         <view wx:else class="fivebox">包邮</view>
         <view class="flex-1"></view>
@@ -34,21 +37,21 @@
         <view class="fivebox">库存{{info.inventory}}</view>
         <view class="flex-1"></view>
         <view class="fivebox">规格{{info.specification}}</view>
-    </view>
-    <!-- <view class="flex-row flex-center">
-        <view class="f-26" style="color:#3A3A3A;">优惠券</view>
+    </view> -->
+    <view class="flex-row flex-center titele_top_main1">
+        <view class="f-26" style="color:#3A3A3A; ">优惠券</view>
         <view class="flex-1"></view>
         <view class="f-22 txt-99">暂无可选优惠券</view>
         <image src="{{uploadpath}}resource/{{res.righticon}}" class="righticon"></image>
-    </view> -->
-    <view class="height-50"></view>
+    </view>
+    <!-- <view class="height-50"></view> -->
     <!-- <view class="flex-row">
         <view class="f-26" style="color:#3A3A3A;">规格</view>
         <view class="flex-1"></view>
         <view class="f-22 txt-99">{{info.specification}}</view>
     </view> -->
-    <view class="height-50"></view>
-    <view class="flex-row flex-center">
+    <!-- <view class="height-50"></view> -->
+    <view class="flex-row flex-center titele_top_main1">
         <view class="f-26" style="color:#3A3A3A;">商品评价</view>
         <view class="flex-1"></view>
         <view class="flex-row" bindtap="navigateto" id="/pages/goodspingjia/goodspingjia?goods_id={{info.id}}">
@@ -57,8 +60,8 @@
         </view>
     </view>
     <view wx:if="{{info.video}}">
-        <view class="height-50"></view>
-        <view class="f-26 margin-bottom-26" style="color:#3A3A3A;">视频</view>
+        <!-- <view class="height-50"></view> -->
+        <view class="f-26 margin-bottom-26 titele_top_main2"  style="color:#3A3A3A;">视频</view>
         <view class="flex-row flex-column">
             <video src="{{uploadpath}}mall/{{info.video}}" play-btn-position="center" controls="true" show-center-play-btn="true" class="videos"></video>
         </view>
@@ -74,16 +77,67 @@
 </view>
 
 <view class="height-100"></view>
-<view class="flex-row flex-center fixbottom">
+<view class="flex-row flex-center fixbottom ">
+
+    <view class="bottom_left">
     <view class="flex-row flex-column margin-left-26" bindtap="backHome">
         <image src="{{uploadpath}}resource/{{res.homeicon}}" class="homeicon"></image>
         <view class="h7 txt-66">首页</view>
     </view>
-    <view class="w70"></view>
-    <view class="flex-row flex-column" bindtap="phoneCall" id="{{instinfo.customerservicemobile}}">
+    <!-- <view class="w70"></view> -->
+    <view class="flex-row flex-column bottom_icon" bindtap="phoneCall" id="{{instinfo.customerservicemobile}}">
         <image src="{{uploadpath}}resource/{{res.kefuicon}}" class="kefuicon"></image>
         <view class="h7 txt-66">客服</view>
     </view>
-    <view class="flex-1"></view>
-    <view class="btns butcolor" bindtap="tobuy" id="/pages/ordersubmit/ordersubmit?goodsid={{info.id}}">立即购买</view>
+      <view class="flex-row flex-column bottom_icon" bindtap="toshopcar">
+        <image src="{{uploadpath}}resource/{{res.gouwuche}}" class="kefuicon"></image>
+        <view class="h7 txt-66">购物车</view>
+    </view>
+    </view>
+    <!-- <view class="flex-1"></view> -->
+    <view class="btn_box">
+    <view class="btns butcolor" bindtap="joinshop">加入购物车</view>
+    <view class="btns butcolors" bindtap="tobuy" id="/pages/ordersubmit/ordersubmit?goodsid={{info.id}}">立即购买</view>
+    </view>
 </view>
+<page-container show="{{show}}" position="{{position}}" duration="{{duration}}" round="{{round}}">
+  <view class="test" style="height: 100%">
+    <view class="test_top">
+        <view class="test_top_left">
+        <image class="test_top_image" src="{{uploadpath}}mall/{{info.imglist[0].img}}" mode="widthFix" />
+        </view>
+        <view class="test_top_right">
+            <text style="font-size:16px;color:red;font-weight: 500;">￥</text>{{info.price}}
+        </view>
+        <!-- <view> -->
+            <view bindtap="exit_btn" class="btn_exit"><image class="image_2" src="{{uploadpath}}resource/{{res.guanbi}}" mode="widthFix"  /></view>
+        <!-- </view> -->
+    </view>
+    <view class="test_main">
+        <view style="color: #333333;margin-left: 10px;font-weight:500;font-size:16px;">规格</view>
+        <view class="guige">
+            <!-- 渲染 -->
+            <view class="one_guige">
+                {{info.specification}}
+            </view>
+             <view class="one_guige">
+                {{info.specification}}
+            </view>
+             <view class="one_guige">
+                {{info.specification}}
+            </view>
+        </view>
+    </view>
+      <view class="numbox">
+        <view>数量</view>
+        <view class="num_btn_box">
+            <view class="btn_s btn_1">-</view>
+            <input class="btn_input">1</input>
+            <view class="btn_s btn_2">+</view>
+        </view>
+      </view>
+    
+        <button class="queren" type="primary">确认</button>
+    
+  </view>
+</page-container>
