--- a/source/pages/malldetail/malldetail.wxss
+++ b/source/pages/malldetail/malldetail.wxss
@@ -1,4 +1,5 @@
 /* pages/malldetail/malldetail.wxss */
+
 .fixedtop {
     width: 100vw;
     position: fixed;
@@ -60,13 +61,16 @@
 }
 
 .fixbottom {
-    width: 100vw;
+    width: 100%;
     background: #ffffff;
     position: fixed;
     bottom: 0;
     left: 0;
     z-index: 10;
-    padding: 16rpx 0 8rpx;
+    /* padding: 16rpx 0 8rpx; */
+    height: 6%;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .margin-left-26 {
@@ -104,4 +108,179 @@
     font-size: 24rpx;
     font-weight: 400;
     color: #999999;
+}
+
+.padding26 {
+    padding: 0;
+    /* margin: 10px 13px; */
+    height: 100%;
+}
+
+.titele_top {
+    width: 100%;
+    background-color: #5AA57A;
+    height: 55px;
+    border-radius: 10px 10px 0px 0px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+}
+
+.title_top_text {
+    margin: 0 12px;
+    font-size: 13px;
+    font-family: PingFangSC-Regular, PingFang SC;
+    font-weight: 400;
+    color: #FFFFFF;
+
+    width: 20%;
+
+}
+
+.titele_top_main {
+    margin: 15px 13px;
+}
+
+.titele_top_main1 {
+    margin: 23px 13px;
+}
+
+.titele_top_main2 {
+    margin-left: 13px;
+}
+
+.butcolors {
+    color: white;
+    background-color: #FCB780;
+}
+
+.btn_box {
+    display: flex;
+}
+
+.bottom_left {
+    display: flex;
+    align-items: center;
+    flex: 1;
+}
+
+.bottom_icon {
+    margin-left: 20px;
+}
+
+.test_top {
+    display: flex;
+    margin-top: 20px;
+    margin-left: 10px
+}
+
+.test {
+    height: 50%;
+}
+
+.test_top_left {
+    width: 35%;
+    height: 35%;
+}
+
+.test_top_image {
+    width: 100%;
+    height: 100%;
+}
+
+.image_2 {
+    width: 100%;
+    height: 100%;
+}
+
+.test_top_right {
+    width: 35%;
+    height: 100%;
+    margin-top: 10px;
+    margin-left: 10px;
+    font-size: 28px;
+    font-family: PingFangSC-Medium, PingFang SC;
+    font-weight: 500;
+    color: #E62129;
+
+}
+
+.btn_exit {
+    width: 15px;
+
+    position: absolute;
+    right: 20px
+}
+/* 规格 */
+.guige {
+
+    height: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    margin: 10px;
+}
+
+.one_guige {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: #F5F5F5;
+    border-radius: 16px;
+    font-size: 14px;
+    font-family: PingFangSC-Regular, PingFang SC;
+    font-weight: 400;
+    color: #333333;
+    width: 40%;
+    margin-right: 10px;
+    margin-bottom: 5px;
+    padding: 10px;
+    margin-top: 10px;
+}
+/* 数量 */
+.numbox {
+    color: #333333;
+    margin-left: 10px;
+    font-weight: 500;
+    font-size: 16px;
+    margin-top: 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 32px;
+}
+.num_btn_box{
+    margin-right: 10px;
+    display: flex;
+    width: 114px;
+    height: 30px;
+    border: 1px solid #dcdcdc;
+    border-radius: 10px;
+}
+.btn_s{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid #fdeeee;
+    width: 70%;
+    font-size: 20px;
+}
+.btn_1{
+    border-radius: 10px 0 0 10px;
+    border-right: 1px solid #dcdcdc;
+}
+.btn_2{
+    border-left: 1px solid #dcdcdc;
+}
+.btn_input{
+    width: 120%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+}
+.queren{
+    background: #5AA57A!important;
+    margin-bottom: 22px;
+    width: 95%;
+    border-radius: 20px;
 }
