--- a/source/pages/mypingjia/mypingjia.wxss
+++ b/source/pages/mypingjia/mypingjia.wxss
@@ -39,3 +39,6 @@
     box-shadow: 0px 0px 18px 0px rgba(0, 0, 0, 0.08);
     border-radius: 8px;
 }
+page{
+    background-color: rgba(243, 246, 247, 1);
+}
