--- a/source/pages/malldetail/malldetail.wxml
+++ b/source/pages/malldetail/malldetail.wxml
@@ -117,27 +117,23 @@
         <view style="color: #333333;margin-left: 10px;font-weight:500;font-size:16px;">规格</view>
         <view class="guige">
             <!-- 渲染 -->
-            <view class="one_guige">
-                {{info.specification}}
+            <view class="one_guige  {{norms == index+1?'one_guige1':'one_guige' }}" data-id="{{item.id}}" bindtap="getnorms"  wx:for="{{info.guige}}" k> 
+                {{item.specifications}}
             </view>
-             <view class="one_guige">
-                {{info.specification}}
-            </view>
-             <view class="one_guige">
-                {{info.specification}}
-            </view>
+
         </view>
     </view>
       <view class="numbox">
         <view>数量</view>
         <view class="num_btn_box">
-            <view class="btn_s btn_1">-</view>
-            <input class="btn_input">1</input>
-            <view class="btn_s btn_2">+</view>
+            <view class="btn_s btn_1" wx:if="{{quantity == 1}}">-</view>
+            <view class="btn_s btn_3" bindtap="reducequantity" wx:else>-</view>
+            <input class="btn_input" bindblur="editInput" type="number" value="{{quantity}}" />
+            <view class="btn_s btn_2" bindtap="addquantity">+</view>
         </view>
       </view>
     
-        <button class="queren" type="primary">确认</button>
+        <button class="queren" bindtap="shopCartBtn" type="primary">确认</button>
     
   </view>
 </page-container>
