--- a/source/pages/malldetail/malldetail.wxss
+++ b/source/pages/malldetail/malldetail.wxss
@@ -205,7 +205,7 @@
     color: #E62129;
 
 }
-
+/* 退出图标 */
 .btn_exit {
     width: 15px;
 
@@ -220,12 +220,28 @@
     flex-wrap: wrap;
     margin: 10px;
 }
-
+/* 单个规格 */
 .one_guige {
     display: flex;
     align-items: center;
     justify-content: center;
     background: #F5F5F5;
+    border-radius: 16px;
+    font-size: 14px;
+    font-family: PingFangSC-Regular, PingFang SC;
+    font-weight: 400;
+    color: #333333;
+    width: 40%;
+    margin-right: 10px;
+    margin-bottom: 5px;
+    padding: 10px;
+    margin-top: 10px;
+}
+.one_guige1{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: #cccccc;
     border-radius: 16px;
     font-size: 14px;
     font-family: PingFangSC-Regular, PingFang SC;
@@ -249,11 +265,11 @@
     align-items: center;
     margin-bottom: 32px;
 }
+/* 数量按钮 */
 .num_btn_box{
     margin-right: 10px;
     display: flex;
-    width: 114px;
-    height: 30px;
+    width: 33%;
     border: 1px solid #dcdcdc;
     border-radius: 10px;
 }
@@ -261,23 +277,29 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    border: 1px solid #fdeeee;
-    width: 70%;
+    width: 80%;
     font-size: 20px;
 }
 .btn_1{
     border-radius: 10px 0 0 10px;
     border-right: 1px solid #dcdcdc;
+    color: #Cccc;
 }
 .btn_2{
     border-left: 1px solid #dcdcdc;
 }
+.btn_3{
+    border-radius: 10px 0 0 10px;
+    border-right: 1px solid #dcdcdc;
+}
 .btn_input{
     width: 120%;
-    height: 100%;
+    height: 27px;
     display: flex;
     align-items: center;
+    text-align: center;
 }
+/* 确认按钮 */
 .queren{
     background: #5AA57A!important;
     margin-bottom: 22px;
