--- a/source/pages/shopcar/shopcar.wxss
+++ b/source/pages/shopcar/shopcar.wxss
@@ -33,5 +33,38 @@ height: 128px;
 .shop_car{
     margin: 10px 0;
     display: flex;
-    
+    width: 100%;
 }
+.shop_car_btn{
+    display: flex;
+    align-items: center;
+    margin-left: 10px;
+}
+checkbox .wx-checkbox-input{
+    width: 40rpx; 
+    height: 40rpx; 
+    border-radius: 50%;
+  }
+  checkbox .wx-checkbox-input.wx-checkbox-input-checked{
+    border: none;
+    background: #37C674;
+  }
+  checkbox .wx-checkbox-input.wx-checkbox-input-checked::before{
+    width: 40rpx;
+    height: 40rpx;
+    line-height: 40rpx;
+    border-radius: 50%;
+    text-align: center;
+    font-size:32rpx; 
+    color:#FFF; 
+    background: transparent;
+    transform:translate(-50%, -50%) scale(1);
+    -webkit-transform:translate(-50%, -50%) scale(1);
+  }
+  .shop_car_img{
+    width: 30%;
+  }
+  .shop_car_imgs{
+    width: 100%;
+    height: 100%;
+  }
